--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -7,6 +7,7 @@ $blue : #0b93fb;
 $dark-red : #e45253;
 $dark-grey : #727473;
 $xlight-grey : rgb(232, 241, 239);
+$xxlight-grey : rgb(242, 247, 246);
 $light-white :rgb(255, 255, 255);
 $light-dark-rgb :rgba(39, 39, 39, 0.568);
 $border-color: #ececec;
