--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -6,6 +6,7 @@ $red : #e45253;
 $blue : #0b93fb;
 $dark-red : #e45253;
 $dark-grey : #727473;
+$dark : #272727;
 $xlight-grey : rgb(232, 241, 239);
 $xxlight-grey : rgb(242, 247, 246);
 $light-white :rgb(255, 255, 255);
