--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "partials/info.scss";
 @import "partials/prevent.scss";
 @import "partials/question.scss";
+@import "partials/footer.scss";
 
  
 *{ 
