--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -11,6 +11,12 @@
     -o-box-shadows:0 0 20px rgba(48,46,77,0.1);
     box-shadow: 0 0 20px rgba(48,46,77,0.1);
 }
+@mixin shadow-ulight{
+    -webkit-box-shadows: 0 0 20px rgba(48,46,77,0.05);
+    -moz-box-shadows: 0 0 20px rgba(48,46,77,0.05);
+    -o-box-shadows:0 0 20px rgba(48,46,77,0.05);
+    box-shadow: 0 0 20px rgba(48,46,77,0.05);
+}
 
 @mixin flex($direction){
     display: flex;
