--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "partials/variables";  
 @import "partials/header.scss";
 @import "partials/info.scss";
+@import "partials/news.scss";
 @import "partials/prevent.scss";
 @import "partials/question.scss";
 @import "partials/footer.scss";
