--- a/scss/partials/news.scss
+++ b/scss/partials/news.scss
@@ -43,7 +43,7 @@
                         border-bottom: solid 1px $border-color; 
                         border-top: solid 1px $border-color; 
                         
-                        li{
+                        .item{
                             width: 25%;
                             text-align: right;
                             padding: 12px 40px 12px 40px;
@@ -56,7 +56,7 @@
                     }
                     .data{ 
                         border-top: none;  
-                        li{ 
+                        .item{ 
                             font-size: $size-medium;   
                         }
                     }
