--- a/scss/style.css
+++ b/scss/style.css
@@ -314,17 +314,17 @@ header {
           align-items: center;
           border-bottom: solid 1px #ececec;
           border-top: solid 1px #ececec; }
-          #news .container .card .card-table-title .container-item li {
+          #news .container .card .card-table-title .container-item .item {
             width: 25%;
             text-align: right;
             padding: 12px 40px 12px 40px;
             list-style: none;
             font-size: 1.4em; }
-            #news .container .card .card-table-title .container-item li:first-child {
+            #news .container .card .card-table-title .container-item .item:first-child {
               text-align: left; }
         #news .container .card .card-table-title .data {
           border-top: none; }
-          #news .container .card .card-table-title .data li {
+          #news .container .card .card-table-title .data .item {
             font-size: 1em; }
 
 b[class="blue"] {
